--- a/index.html
+++ b/index.html
@@ -1,45 +1,42 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="manifest" href="manifest.json" />
+  <title>CITISEA App</title>
+  <style>
+    body { font-family: sans-serif; padding: 20px; }
+    input, button { padding: 10px; margin: 5px; width: 100%; }
+  </style>
+</head>
+<body>
+  <h2>Form Pendaftaran CITISEA</h2>
+  <input id="name" type="text" placeholder="Nama Lengkap" />
+  <input id="email" type="email" placeholder="Email" />
+  <button onclick="submitForm()">Kirim</button>
+  <p id="status"></p>
 
-\f0\fs24 \cf0 <!DOCTYPE html>\
-<html>\
-<head>\
-  <title>Form Pendaftaran Anggota</title>\
-  <meta name="viewport" content="width=device-width, initial-scale=1">\
-</head>\
-<body>\
-  <h2>Pendaftaran Anggota</h2>\
-  <form id="form">\
-    <input name="nama" placeholder="Nama Lengkap" required><br><br>\
-    <input name="email" type="email" placeholder="Email" required><br><br>\
-    <input name="hp" placeholder="Nomor HP" required><br><br>\
-    <button type="submit">Daftar</button>\
-  </form>\
-\
-  <p id="status"></p>\
-\
-  <script>\
-    document.getElementById("form").addEventListener("submit", function(e) \{\
-      e.preventDefault();\
-      const form = new FormData(e.target);\
-      fetch("https://script.google.com/macros/s/AKfycbx123.../exec", \{\
-        method: "POST",\
-        body: form\
-      \})\
-      .then(response => response.text())\
-      .then(result => \{\
-        document.getElementById("status").innerText = "\uc0\u9989  " + result;\
-        e.target.reset();\
-      \})\
-      .catch(error => \{\
-        document.getElementById("status").innerText = "\uc0\u10060  Gagal: " + error;\
-      \});\
-    \});\
-  </script>\
-</body>\
-</html>\
-}
+  <script>
+    function submitForm() {
+      const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
+      const status = document.getElementById("status");
+      
+      fetch('https://script.google.com/macros/s/AKfycbzC5qn58Nufe7Ak61aSK6KA2GL9V3R9HP83aZ2qm-aqCHVncK_ywWFEp3TLwZnvZq-l/exec', {
+        method: 'POST',
+        mode: 'no-cors',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ name, email })
+      });
+
+      status.innerText = "Data terkirim!";
+    }
+
+    // Register service worker
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js');
+    }
+  </script>
+</body>
+</html>
